# coal

./: .clang-format  .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt
input/: AuAuPID.txt  input.yaml
scripts/: flow.py  statics.py  v1_over_y.py  v2.py
src/cpp/: Centrality.cpp  ClusterCalculator.cpp  ThreadPool.cpp  clusterMix.cpp  config.cpp  fileloader.cpp  flow.cpp  main.cpp  method.cpp  particle.cpp  run.cpp  smash.cpp  xmath.cpp
src/headers/: Centrality.h  ClusterCalculator.h  MatrixMethod.h  ThreadPool.h  chrono.h  clusterMix.h  config.h  ctpl.h  fileloader.h  flow.h  logger.h  method.h  output.h  particle.h  random.h  run.h  shortcut.h  smash.h  xmath.h
tests/: CMakeLists.txt  test_cluster.cpp  test_method.cpp
